06-WEB/0x00-BananaShopLogin-H/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: banana-shop-login
  labels:
    app: banana-shop-login
spec:
  ports:
    - name: http-port
      port: 5000
  selector:
    app: banana-shop-login
